1.4.4 (not yet released):
- Make sure the make_database_password script will not fail without perl-Tk
(which happens if users only want to use the CLI).
- Continue to improve error handling.

1.4.3:
- Update the list of prereqs for ubuntu.
- Explicitely restart the MYSQL service before to actually initialize the 
database.
- Make some return codes more coherent.

1.4.2:
- Fix the query to get the list of selected OPKGs.
- Improved error handling.

1.4.1:
- Before to reset ODA, we try to start the database daemon so we are sure we
can actually try to delete the OSCAR database.
- Implement a work around when detecting the database type during a reset.
- Update the prereqs list for Debian based systems.
- Fix a bug when saving image data.

1.4:
- Add the capability of reseting ODA.
- Force the start of the database daemon during ODA initialization.
- Fix a problem with the mysql prereq on Debian based system (actually install
mysql and not only the libraries).
- Modify the Makefile so we can choose the directory where the binary packages
are stored.
- Enable the creation of unsigned Debian packages by setting the
UNSIGNED_OSCAR_PKG environment variable.

1.3.5:
- Slightly improve debugging messages.
- Fix a problem of database disconnection when executing an SQL command.
- Modify the Makefile so we can choose the directory to save sources when
creating RPMs.
- Make the Makefile more generic.

1.3.4:
- Update the populate_default_package_set script: there are now two options 
"verbose" and "debug" to manage the level of verbosity while running.
- Fix a bug in Database.pm (update_node_package_status).

1.3.3:
- Fix two problems in the populate_oda_packages_table script: we were detecting
the compatible distro instead of the real distro; the query to detect OPKGs was
wrong on RPM based systems.

1.3.2:
- Fix a problem when querying data about a specific node/nic.
- Improve the perldoc documentation of few Perl modules.
- Fix a problem when getting cluster data.

1.3.1: